Changes in List_Basic

--- a/List_Basics.ipynb
+++ b/List_Basics.ipynb
@@ -325,8 +325,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ceda092e-c74c-451b-a8f2-f327824a8957",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Changed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae74c98-9f68-402f-bd12-ce534e4e0fc3",
    "metadata": {},
    "outputs": [],
    "source": []
